[gd_scene format=3 uid="uid://c6x8u7k7v5y1b"]

[ext_resource type="Script" path="res://scripts/ui/fuel_warning_dialog.gd" id="1_script"]

[node name="FuelWarningDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0.05, 0.8)

[node name="GlowEffect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -128.0
offset_right = 228.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.12)

[node name="BorderOuter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -171.0
offset_right = 224.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -166.0
offset_right = 220.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundGradient" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.05, 0.02, 0.02, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="LeftDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.5)

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 24
text = "[ WARNING ]"
horizontal_alignment = 1

[node name="RightDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(20, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.5)

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.3)

[node name="MessageLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Fuel levels critical.
Proceeding will engage Drift Mode."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.3)

[node name="DontShowCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Don't show again"

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="JumpButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "[ JUMP ]"

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(140, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "[ CANCEL ]"

[node name="CornerTL" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -165.0
offset_right = -215.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.8)

[node name="CornerTR" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 214.0
offset_top = -164.0
offset_right = 222.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.8)

[node name="CornerBL" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = 201.0
offset_right = -215.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.8)

[node name="CornerBR" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 216.0
offset_top = 201.0
offset_right = 224.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0.3, 0.2, 0.8)
